CSS edit for fixed position mobile

--- a/src/App.css
+++ b/src/App.css
@@ -407,10 +407,6 @@ html {
 
 html, body, #root {
   position: fixed !important;
-  top: 0 !important;
-  left: 0 !important;
-  right: 0 !important;
-  bottom: 0 !important;
   width: 100% !important;
   height: 100% !important;
   overflow: hidden !important;
